# orv-analysis

./: .gitignore  README.md  extract-html-text.py  wordcloud-generator.py
extracted EPUB/OEBPS/: .gitlab-ci.yml  chap_00006.xhtml  chap_00008.xhtml  chap_00009.xhtml  chap_00015.xhtml  chap_00016.xhtml  chap_00017.xhtml  chap_00023.xhtml  chap_00024.xhtml  chap_00031.xhtml  chap_00035.xhtml  chap_00037.xhtml  chap_00038.xhtml  chap_00039.xhtml  chap_00043.xhtml  chap_00044.xhtml  chap_00045.xhtml  chap_00046.xhtml  chap_00047.xhtml  chap_00048.xhtml  chap_00049.xhtml  chap_00050.xhtml  chap_00052.xhtml  chap_00053.xhtml  chap_00054.xhtml  chap_00055.xhtml  chap_00056.xhtml  chap_00060.xhtml  chap_00061.xhtml  chap_00062.xhtml  chap_00063.xhtml  chap_00064.xhtml  chap_00067.xhtml  chap_00070.xhtml  chap_00071.xhtml  chap_00079.xhtml  chap_00083.xhtml  chap_00084.xhtml  chap_00085.xhtml  chap_00086.xhtml  (+144 more)
obsidian/: chapters.txt  chapters_obsidian.txt  obsidian.md  obsidian.py  regex.txt
python/: extract-html-sentences.py  extract-html-text.py  obsidian.py  uh.html  wordcloud-generator.py
python/text-gen-ai/: dataset.py  train.py
python/text-generation/: dataset.py  model.py
quote-API/: api.py  api.test.py  pyproject.toml  quote-API.md  quotes.json
text/: chapters.txt  epilogue_chapters.txt  extract-html-sentences.py  extract-html-text.py  text.md
wordcloud/: wordcloud-generator.py  wordcloud.md
